networking/multiple-path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-multi-path
  namespace: default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: hello-world-service-single
      port:
        number: 80
  rules:
  - host: path.example.com
    http:
      paths:
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: hello-world-service-red
            port:
              number: 80
      - path: /blue
        pathType: Exact
        backend:
          service:
            name: hello-world-service-blue
            port:
              number: 8080
