networking/name-based-virtual-hosts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-based-virtual-host-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: red.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-world-service-red
                port:
                  number: 4242
    - host: blue.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hello-world-service-blue
                port:
                  number: 4343
  defaultBackend:
    service:
      name: hello-world-service-single
      port:
        number: 80
