networking/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress-example
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tls.example.com
      secretName: tls-secret
  rules:
    - host: tls.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hello-world-service-single
              port:
                number: 80
  defaultBackend:
    service:
      name: hello-world-service-single
      port:
        number: 80
